# melodramatick

./: .coveragerc  .env  .gitignore  .gitmodules  MANIFEST.in  README.md  full_db.json  index.html  manage.py  melodramatick_dump.sql  performance.json  requirements.txt  setup.cfg  styles.css
.github/workflows/: deploy.yml  django.yml
app_template/: admin.py-tpl  filters.py-tpl  models.py-tpl  settings.py-tpl  tables.py-tpl  urls.py-tpl  views.py-tpl  wsgi.py-tpl
app_template/migrations/: 0001_create_site.py-tpl
balletick/: admin.py  apps.py  filters.py  models.py  settings.py  tables.py  urls.py  views.py
balletick/fixtures/: ballet.json  listen.json  work.json
balletick/migrations/: 0001_initial.py  0002_auto_20230807_1251.py
balletick/templates/balletick/: ballet_detail.html
concertantick/: admin.py  apps.py  filters.py  models.py  settings.py  tables.py  urls.py  views.py
concertantick/migrations/: 0001_initial.py  0002_concerto_instrument.py  0003_alter_concerto_instrument.py  0004_alter_concerto_instrument.py
concertantick/templates/concertantick/: concerto_detail.html
deployments/: hetzner.md
docs/: CNAME  index.html
guides/: make_static_images_for_app.md
melodramatick/: admin.py  apps.py  asgi.py  celery.py  celeryconfig.py  forms.py  models.py  settings.py  settings_template.py  tasks.py  tests.py  urls.py  views.py  wsgi.py
melodramatick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
melodramatick/accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
melodramatick/accounts/fixtures/: user.json
melodramatick/accounts/migrations/: 0001_initial.py  0002_customuser_spotify_player.py
melodramatick/composer/: admin.py  apps.py  filters.py  models.py  tables.py  tests.py  urls.py  views.py
melodramatick/composer/fixtures/: composer.json  quote.json  sitecomplete.json
melodramatick/composer/migrations/: 0001_initial.py  0002_auto_20230929_1252_squashed_0003_auto_20230929_1315.py  0003_remove_composer_complete.py  0004_auto_20231003_2151.py  0005_composer_birth_date.py
melodramatick/fixtures/: contenttypes.json  sites.json
melodramatick/listen/: admin.py  apps.py  forms.py  models.py  plots.py  tests.py  urls.py  views.py
melodramatick/listen/fixtures/: album.json  listen.json
melodramatick/listen/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20230720_1132.py  0004_auto_20230922_1251.py  0005_auto_20230922_1550.py  0006_album_url.py  0007_alter_album_uri.py  0008_alter_album_id.py
melodramatick/management/commands/: startapptick.py
melodramatick/performance/: admin.py  apps.py  models.py  plots.py  tests.py  urls.py  views.py
melodramatick/performance/fixtures/: company.json  performance.json  venue.json
melodramatick/templates/: base.html  home.html
melodramatick/top_list/: admin.py  apps.py  models.py  tables.py  tests.py  urls.py  views.py
melodramatick/utils/: annotation.py  django_initialiser.py  filters.py  managers.py  models.py  plots.py  quotel_api.py  randomisers.py  rendering.py  spotify_api.py  tests.py  widgets.py
melodramatick/work/: admin.py  apps.py  filters.py  forms.py  models.py  plots.py  tables.py  tests.py  views.py
testtick/: admin.py  apps.py  filters.py  models.py  runner.py  settings.py  tables.py  tests.py  urls.py  views.py  wsgi.py
testtick/fixtures/: testtick_album.json  testtick_company.json  testtick_composer.json  testtick_listen.json  testtick_performance.json  testtick_sitecomplete.json  testtick_testitem.json  testtick_top_list.json  testtick_venue.json  testtick_work.json
testtick/migrations/: 0001_initial.py  0002_create_site.py
(+44 files in other folders)
